# backend

./: .env.default  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
backend/: __main__.py  app.py  aws.py  config.py  db.py  errors.py  models.py  schemas.py
backend/repos/: bird.py  files.py  image.py  images.py
backend/views/: bird.py  files.py  image.py  task.py  upload.py
tests/: conftest.py  factories.py  test_bird.py  test_config.py  test_image.py  test_task.py
