[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ProtKsen <protcenko.kseniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
mypy = "^0.961"
flake8 = "^4.0.1"
Flask = "^2.1.2"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
